# 2023-01-25-ImGui-barebone-windows-blazeface-integrated

./: .gitignore  CMakeLists.txt  README.md  face_detector_cpp.txt  face_detector_python.txt  face_regressor_python.txt  main.cpp
WebServer/: CMakeLists.txt  main.cpp
WebServer/include/web_server/: MultiClientChat.h  TcpListener.h  WebServer.h
WebServer/src/: CMakeLists.txt  MultiClientChat.cpp  TcpListener.cpp  WebServer.cpp
cmake/: link_opencv_and_torch.cmake
config/: CMakeLists.txt
config/include/config/: global.h  global_config.h
imgui/: CMakeLists.txt
imgui/include/imgui/: font.h  global.h  iconcpp.h  icons.h  imguipp.h  loader.h  menu.h  text_editor.h  trial_component.h
imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp  imguipp.cpp  menu.cpp  text_editor.cpp  trial_component.cpp
libnpy/: CMakeLists.txt
mediapipe_libtorch/: CMakeLists.txt
mediapipe_libtorch/src/mediapipe_libtorch/: blazebase.cpp  blazebase.h  blazeface.cpp  blazeface.h  blazeface_landmark.cpp  blazeface_landmark.h  demo.py  face_detector.pt  face_detector_anchors.pt  face_regressor.pt  facial_landmark.cpp  facial_landmark.h  pch.h  visualize.cpp  visualize.h
mediapipe_pytorch/: blazebase.py  demo.py  gen_weight.py
mongoose/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt
utils/include/utils/: capture_utils.h  npy_utils.h  pch.h
utils/src/utils/: capture_utils.cpp  npy_utils.cpp  web_utils.cpp
